works with monogdb + setup dockerfile+compose